--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ form div {
   margin-bottom: 15px;
 }
 
+input:focus {
+  border: 2px solid #f2796e;
+}
+
 /* form icons */
 
 form > div > i {
@@ -54,6 +58,39 @@ form > div > i {
 .success-icon, 
 .failure-icon {
   right: 0;
+  opacity: 0;
+}
+
+.failure-icon,
+.error {
+  color: red;
+}
+
+.success-icon {
+  color: green;
+}
+
+.error {
+  font-size: 14.5px;
+  margin-top: 5px;
+}
+
+/* button */
+
+button {
+  width: 100%;
+  height: 45px;
+  background-color: #f2796e;
+  border: 2px solid #f2796e;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+button:hover {
+  opacity: 0.8;
 }
 
 /* media queries */
