--- a/style.css
+++ b/style.css
@@ -48,6 +48,46 @@ input:focus {
   border: 2px solid #f2796e;
 }
 
+
+/* social section */
+
+.btn {
+  display: flex;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.btn-1, 
+.btn-2 {
+  padding: 10px 5px;
+  width: 100%;
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #c4c4c4;
+  border-radius: 8px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.btn-2 {
+  background-color: #4f70b5;
+  color: #fff;
+}
+
+.or {
+  text-align: center;
+}
+
+.question {
+  font-size: 15px;
+}
+
+span {
+  color: #f2796e;
+  cursor: pointer;
+}
+
 /* form icons */
 
 form > div > i {
